--- a/nginx.8gua.conf
+++ b/nginx.8gua.conf
@@ -11,7 +11,7 @@ server {
         expires max;
         root $root;
     }
-    location ~ ^/-/.*(\.toml|\.md|\.html|\.tmp)$ {
+    location ~ ^/-/.*\.(toml|md|html|tmp|json)$ {
         root $root;
     }
     location /-/S/ {
