--- a/Caddyfile
+++ b/Caddyfile
@@ -24,6 +24,7 @@ https://blog.test.com {
         if {file} not_ends_with .xml 
         if {file} not_ends_with .txt
         if {file} not_ends_with .toml
+        if {file} not_ends_with .tmp
         if {path} not_starts_with /-/S/
         if {path} not_starts_with /-S/
         if {path} not_starts_with /-/md/
